--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "pomasanaapp",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "coffee-script": "^1.7.1",
+    "express": "^4.4.1",
+    "gzippo": "^0.2.0"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-autoprefixer": "~0.4.0",
@@ -36,5 +40,15 @@
   },
   "scripts": {
     "test": "grunt test"
-  }
+  },
+  "main": "Gruntfile.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://giacomo_bresciani@bitbucket.org/giacomo_bresciani/pomasanaapp.git"
+  },
+  "author": "",
+  "license": "ISC"
 }
